--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Finding NeMo: Negative-mined Mosaic Augmentation for Referring Image Segmentation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -72,13 +72,13 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      <sup> 1</sup> "Seoul National University"
+                      <sup> 1</sup> "Seoul National University" </span>
                     <span class="author-block">
-                      <sup> 2</sup> "Twelve Labs"
+                      <sup> 2</sup> "Twelve Labs" </span>
                     <span class="author-block">
-                      <sup> 3</sup> "Allen Institute for AI"
+                      <sup> 3</sup> "Allen Institute for AI" </span>
                     <span class="author-block">
-                      <sup> 4</sup> "Google Research"
+                      <sup> 4</sup> "Google Research" </span>
                       <br>ECCV 2024</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
