--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Finding NeMo: Negative-mined Mosaic Augmentation for Referring Image Segmentation</h1>
+            <h1 class="title is-1 publication-title">Finding NeMo : Negative-mined Mosaic Augmentation for Referring Image Segmentation</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -72,11 +72,11 @@
 
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">
-                      <sup> 1</sup> "Seoul National University" </span>
+                      <sup> 1</sup> Seoul National University </span>
                     <span class="author-block">
-                      <sup> 2</sup> "Twelve Labs" </span>
+                      <sup> 2</sup> Twelve Labs </span>
                     <span class="author-block">
-                      <sup> 3</sup> "Allen Institute for AI" </span>
+                      <sup> 3</sup> Allen Institute for AI </span>
                     <span class="author-block">
                       <sup> 4</sup> "Google Research" </span>
                       <br>ECCV 2024</span>
@@ -141,11 +141,11 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
+<!--       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
-      </video>
+      </video> -->
+      <img src="static/images/overview.jpeg">
       <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
       </h2>
