--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      <img src="static/images/overview.jpeg">
+      <img src="static/images/figure1.jpeg">
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+      Diverse visual and linguistic challenges of referring scenarios. In (a), query (1) demands discernment among three road signs, while query (2) involves identifying a “woman”, relatively easier due to a single instance. NeMo, our method, in (b) uses sim- ilar negative images to generate a mosaic. Query (2) becomes harder as the augmented image contains additional instances of “woman” (e.g., women standing or sitting), and thus “in front of the wall” becomes crucial hint to solve the problem.
       </h2>
     </div>
   </div>
