--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      <img src="static/images/figure1.jpeg">
+      <img src="static/images/figure1.jpeg" width=50%>
       <h2 class="subtitle has-text-centered">
       Diverse visual and linguistic challenges of referring scenarios. In (a), query (1) demands discernment among three road signs, while query (2) involves identifying a “woman”, relatively easier due to a single instance. NeMo, our method, in (b) uses sim- ilar negative images to generate a mosaic. Query (2) becomes harder as the augmented image contains additional instances of “woman” (e.g., women standing or sitting), and thus “in front of the wall” becomes crucial hint to solve the problem.
       </h2>
