--- a/index.html
+++ b/index.html
@@ -140,15 +140,14 @@
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-<!--       <video poster="" id="tree" autoplay controls muted loop height="100%">
+    <div class="hero-body" style="text-align: center;"> <!-- Add text-align center -->
+      <!-- <video poster="" id="tree" autoplay controls muted loop height="100%">
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      
-      <img src="static/images/figure1.jpeg" width="70%" class="center" style="display: block; margin: 0 auto;"> 
+      <img src="static/images/figure1.jpeg" width="70%" class="center" style="display: block; margin: 0 auto;"> <!-- Center the image -->
       <h2 class="subtitle has-text-centered">
-      Diverse visual and linguistic challenges of referring scenarios. In (a), query (1) demands discernment among three road signs, while query (2) involves identifying a “woman”, relatively easier due to a single instance. NeMo, our method, in (b) uses sim- ilar negative images to generate a mosaic. Query (2) becomes harder as the augmented image contains additional instances of “woman” (e.g., women standing or sitting), and thus “in front of the wall” becomes crucial hint to solve the problem.
+      Diverse visual and linguistic challenges of referring scenarios. In (a), query (1) demands discernment among three road signs, while query (2) involves identifying a “woman”, relatively easier due to a single instance. NeMo, our method, in (b) uses similar negative images to generate a mosaic. Query (2) becomes harder as the augmented image contains additional instances of “woman” (e.g., women standing or sitting), and thus “in front of the wall” becomes crucial hint to solve the problem.
       </h2>
     </div>
   </div>
