--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 <!-- End paper abstract -->
 
 <section class="hero is-small">
-  <div class="hero-body" style="text-align: center;">
+  <div class="hero-body"> 
     <div class="container is-max-desktop">
       <h2 class="title is-3">Motivation</h2>
       <div class="content has-text-justified">
         <p>
           Referring Image Segmentation segments an object when you are given an image and a free-form query referring to that certain target object. What differentiates RIS from other grounding tasks is that the scene is usually given in the way that visually similar objects coexist as in the slide. Due to this nature of RIS task, we find difficulty levels in RIS can change depending on the number of negative objects that look similar to the target referent. The more negative objects you have, the more difficult the RIS problem becomes and the model needs to fully understand the words to discern similar objects.
         </p>
-        <img src="static/images/intro.jpeg" width="70%" class="center" style="display: block; margin: 0 auto;">
+        <img src="static/images/intro.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;">
       </div>
     </div>
   </div>
