--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <source src="static/videos/banner_video.mp4"
         type="video/mp4">
       </video> -->
-      <img src="static/images/figure1.jpeg" width="70%" class="center" style="display: block; margin: 0 auto;"> <!-- Center the image -->
+      <img src="static/images/overview.jpeg" width="70%" class="center" style="display: block; margin: 0 auto;"> <!-- Center the image -->
       <h2 class="subtitle has-text-centered">
-      Diverse visual and linguistic challenges of referring scenarios. In (a), query (1) demands discernment among three road signs, while query (2) involves identifying a “woman”, relatively easier due to a single instance. NeMo, our method, in (b) uses similar negative images to generate a mosaic. Query (2) becomes harder as the augmented image contains additional instances of “woman” (e.g., women standing or sitting), and thus “in front of the wall” becomes crucial hint to solve the problem.
+        In this work, we propose a data augmentation method that generates ambiguous examples where a model is encouraged to concretely understand the scene and the query. In the left image, understanding “a woman” is enough to find the target, but in the right, the model now needs to understand what “woman in front of the wall” means.
       </h2>
     </div>
   </div>
