--- a/index.html
+++ b/index.html
@@ -240,13 +240,16 @@
 <section class="hero is-small is-light">
   <div class="hero-body"> 
     <div class="container is-max-desktop">
-      <h2 class="title is-3">Overall Comparison</h2>
-      <div class="content has-text-justified">
-        <h
-        <p>
+      <div class="column is-centered">
+        <div class="column is-full">
+          <h2 class="title is-3">Overall Comparison</h2>
+          <div class="content has-text-justified">
+            <p>
          We observe a larger performance boost on more complex datasets.  Harder datasets benefit more because of its intricate referring expressions and visually dense scenes.
         </p>
         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;">
+          </div>
+        </div>
       </div>
     </div>
   </div>
