--- a/index.html
+++ b/index.html
@@ -255,6 +255,23 @@
   </div>
 </section>
 
+<section class="hero is-small">
+  <div class="hero-body"> 
+    <div class="container is-max-desktop">
+      <div class="column is-centered">
+        <div class="column is-full">
+          <h2 class="title is-3">Comparison to other augmentation methods</h2>
+          <div class="content has-text-justified">
+            <p> Our approach performed best, as it preserves the original context needed for referring image segmentation, while the other methods often disrupt key visual elements.
+        </p>
+        <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
