--- a/index.html
+++ b/index.html
@@ -273,6 +273,42 @@
 </section>
 
 
+<section class="hero is-small is-light">
+  <div class="hero-body"> 
+    <div class="container is-max-desktop">
+      <div class="column is-centered">
+        <div class="column is-full">
+          <h2 class="title is-3">Detailed Analysis of the Proposed Method</h2>
+          <div class="content has-text-justified">
+            <p> 
+        </p>
+<!--         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="hero is-small">
+  <div class="hero-body"> 
+    <div class="container is-max-desktop">
+      <div class="column is-centered">
+        <div class="column is-full">
+          <h2 class="title is-3">Qualitative Results</h2>
+          <div class="content has-text-justified">
+            <p> 
+        </p>
+<!--         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
   <div class="hero-body">
