--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <div class="content has-text-justified">
             <p> Our approach performed best, as it preserves the original context needed for referring image segmentation, while the other methods often disrupt key visual elements.
         </p>
-        <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;">
+<!--         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> -->
           </div>
         </div>
       </div>
