--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <section class="hero is-small is-light">
   <div class="hero-body"> 
     <div class="container is-max-desktop">
-      <div class="column is-centered has-text-centered">
+      <div class="column is-centered"> <!--has-text-centered-->
         <div class="column is-full">
           <h2 class="title is-3">Do current RIS models actually perform well in hard scenarios?</h2>
           <div class="content has-text-justified">
