--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </video> -->
       <img src="static/images/overview.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> <!-- Center the image -->
       <h2 class="subtitle has-text-centered">
-        <b>Ne</b>gative-mined <b>Mo</b>saic Augmentation (NeMo) generates ambiguous examples where a model is encouraged to concretely understand the scene and the query. In the original image, understanding “a woman” is enough to find the target, but in the augmented image, the model needs to understand what “woman in front of the wall” means.
+        <b>Negative-mined Mosaic Augmentation (NeMo)</b> generates ambiguous examples where a model is encouraged to concretely understand the scene and the query. In the original image, understanding “a woman” is enough to find the target, but in the augmented image, the model needs to understand what “woman in front of the wall” means.
       </h2>
     </div>
   </div>
