--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <p>
          We observe a larger performance boost on more complex datasets.  Harder datasets benefit more because of its intricate referring expressions and visually dense scenes.
         </p>
-        <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;">
+        <img src="static/images/overall_comparison.png" width="100%" class="center" style="display: block; margin: 0 auto;">
           </div>
         </div>
       </div>
