--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
           <div class="content has-text-justified">
             <p> Our approach performed best, as it preserves the original context needed for referring image segmentation, while the other methods often disrupt key visual elements.
         </p>
-<!--         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> -->
+        <img src="static/images/other_aug.png" width="70%" class="center" style="display: block; margin: 0 auto;">
+        <img src="static/images/other_aug_table.png" width="50%" class="center" style="display: block; margin: 0 auto;">
           </div>
         </div>
       </div>
@@ -287,7 +288,7 @@
           <div class="content has-text-justified">
             <p> 
         </p>
-<!--         <img src="static/images/overall_comparison.jpeg" width="100%" class="center" style="display: block; margin: 0 auto;"> -->
+        <img src="static/images/qual_res.png" width="100%" class="center" style="display: block; margin: 0 auto;">
           </div>
         </div>
       </div>
