--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
           <h2 class="title is-3">Qualitative Results</h2>
           <div class="content has-text-justified">
             <p> 
+              Qualitative results demonstrates that (a) our method successfully detects a blurred and small “person” in the background, positioned behind the most prominent person in the image. (b) Our method also segments the entire dish while the baseline only detects the left half without fully understanding the query describing the right half. Also, (c) it is apparent that our method yields an output with more distinct shape for “the second” horse. (d) Our method captures objects more accurately in scenarios involving directional expressions, indicating improved understand- ing both in absolute and relative positions. 
         </p>
         <img src="static/images/qual_res.png" width="100%" class="center" style="display: block; margin: 0 auto;">
           </div>
