--- a/index.html
+++ b/index.html
@@ -271,21 +271,21 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/detailed1.png" alt="MY ALT TEXT"/>
+        <img src="static/images/detailed1.png" alt="MY ALT TEXT" class="center" style="display: block; margin: 0 auto;"/>
         <h2 class="subtitle has-text-centered">
           <b>Performance on Challenging Scenarios</b> The performance gap between with and without NeMo gets larger with more negative objects in the image. This indicates that NeMo performs better on challenging samples as our expectation.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/detailed2.png" alt="MY ALT TEXT"/>
+        <img src="static/images/detailed2.png" alt="MY ALT TEXT" class="center" style="display: block; margin: 0 auto;"/>
         <h2 class="subtitle has-text-centered">
           <b>Robustness on Object Scale</b> We evaluate the impact of our method across various object sizes. Improvement is observed in most cases, especially for smaller objects. This can be attributed to the wider range of object scales seen during training by integrating objects both in the original and 1/4 size.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/detailed3.png" alt="MY ALT TEXT"/>
+        <img src="static/images/detailed3.png" alt="MY ALT TEXT"class="center" style="display: block; margin: 0 auto;" />
         <h2 class="subtitle has-text-centered">
          <b>Complexity of Referring Expression</b> We measure how our method behaves depending on sentence lengths. It shows that NeMo is effective across all sentence lengths, even with longer complex ones. NeMo also helps capture important linguistic cues for grounding.
 
@@ -293,7 +293,7 @@
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/detailed4.png" alt="MY ALT TEXT"/>
+      <img src="static/images/detailed4.png" alt="MY ALT TEXT" class="center" style="display: block; margin: 0 auto;"/>
       <h2 class="subtitle has-text-centered">
         <b>Positional Understanding</b> It demonstrates that NeMo exhibits stronger improvements especially for queries with positional keywords even when the queries are long and complex.
       </h2>
