--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <span class="author-block">
                   <a href="FOURTH AUTHOR PERSONAL LINK" target="_blank">Junho Lee</a><sup>1</sup>,</span>
                 <span class="author-block">
-                  <a href="FIFTH AUTHOR PERSONAL LINK" target="_blank">Sangho Lee</a><sup>3</sup>,</span>
+                  <a href="https://sangho-vision.github.io/" target="_blank">Sangho Lee</a><sup>3</sup>,</span>
                 <span class="author-block">
                   <a href="http://www.joonseok.net/home.html" target="_blank">Joonseok Lee</a><sup>1,4</sup>
                   </span>
