--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <h2 class="title is-3">Do current RIS models actually perform well in hard scenarios?</h2>
           <div class="content has-text-justified">
             <p>
-          We manually pick 100 easy and hard samples depending on the number of negative objects. A huge performance gap exists between easy & hard examples in current models. Variant Inter and even Intra-dataset grounding difficulty levels exist in training data as well. We ask if these samples are challenging enough to discern subtle visual and textual nuance for RIS.
+          We manually pick 100 easy and hard samples depending on the number of negative objects. A huge performance gap exists between easy & hard examples in current models. We find that variant Inter and even Intra-dataset grounding difficulty levels exist in training data as well; many easy samples are found in the datasets that are thought to be harder. We ask whether these samples are challenging enough to learn how to discern subtle visual and textual nuance for RIS.
 <!--           We evaluate if the current models actually perform well in hard cases by manually picking examples by considering the number of negative objects. Surprisingly, we find there is a huge performance gap between easy and hard scenarios. To find a possible cause, we have inspected training samples, and found many easy samples even within the dataset that are thought to be harder, once we also consider the degree of visual ambiguity in the scene given the query. We assume these samples may not be challenging enough to train models for capabilities that RIS needs. -->
         </p>
             <img src="static/images/motivation.png" width="100%" class="center"  style="display: block; margin: 0 auto;">
