--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container is-max-desktop">
       <div class="column is-centered">
         <div class="column is-full">
-          <h2 class="title is-3">Referring Image Segmentation</h2>
+          <h2 class="title is-3">What makes Referring Image Segmentation difficult?</h2>
           <div class="content has-text-justified">
             <p>
     <!--           Referring Image Segmentation segments an object when you are given an image and a free-form query referring to that certain target object. What differentiates RIS from other grounding tasks is that the scene is usually given in the way that visually similar objects coexist. Due to this nature of RIS task, we find difficulty levels in RIS can change depending on the number of negative objects that look similar to the target referent. The more negative objects you have, the more difficult the RIS problem becomes and the model needs to fully understand the words to discern similar objects. -->
