--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="container is-max-desktop">
       <div class="column is-centered">
         <div class="column is-full">
-          <h2 class="title is-3">Mosaic Augmentation + Negative Mining with Filter</h2>
+          <h2 class="title is-3">Negative-mined Mosaic Augmentation</h2>
           <div class="content has-text-justified">
             <p>Exposure to hard examples can improve a model in complex scenarios. Complexity arises when multiple similar objects coexist, requiring deeper understanding of the scene and expression. We propose Negative-mined Mosaic Augmentation that mimics such challenging scenarios without any data-collection cost. Given an image and a query, it selects negative images at a proper level of difficulty, filtering out visually or semantically images to the query to avoid false negatives and irrelevant (easy) images identified by text-to-image retrieval. It randomly selects three among the remaining to construct a mosaic.</p>
         <img src="static/images/pipeline.jpeg" width="80%" class="center" style="display: block; margin: 0 auto;">
